# NearShield

./: .env.local  Installation&run  LICENSE  README.md  package.json
contracts/nearshield/: Cargo.toml
contracts/nearshield/src/: campaign.rs  deposit.rs  events.rs  leaderboard.rs  lib.rs  owner.rs  submission.rs  types.rs
frontend/near-shield-app/: tailwind.config.js
frontend/near-shield-app/config/: near.ts
frontend/near-shield-app/context/: WalletContext.tsx
frontend/near-shield-app/hooks/: useWallet.ts
frontend/near-shield-app/lib/: ipfs.ts  nearshield.ts
frontend/near-shield-app/pages/: _app.tsx  index.tsx
frontend/near-shield-app/pages/campaigns/: [id].tsx  create.tsx  index.tsx
frontend/near-shield-app/styles/: globals.css
frontend/near-shield-app/types/: index.ts
scripts/: deploy-testnet.sh  init-mainnet.sh
