[package]
name = "nearshield"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uint = { version = "0.9", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
